tests/baselines/reference/indirectSelfReference.errors.txt
tests/cases/compiler/indirectSelfReference.ts(1,7): error TS2506: 'a' is referenced directly or indirectly in its own base expression.
tests/cases/compiler/indirectSelfReference.ts(2,7): error TS2506: 'b' is referenced directly or indirectly in its own base expression.


==== tests/cases/compiler/indirectSelfReference.ts (2 errors) ====
    class a extends b{ }
          ~
!!! error TS2506: 'a' is referenced directly or indirectly in its own base expression.
    class b extends a{ }
          ~
!!! error TS2506: 'b' is referenced directly or indirectly in its own base expression.